# moonlander

./: .gitignore  CMakeLists.txt  README.md  Thrust.cpp  Thrust.h  environmentConfig.h  gitHints.txt  jsonConfigReader.cpp  jsonConfigReader.h  lander.json  main.cpp  moonlander  output.cpp  output.h  physics.cpp  physics.h  readme.txt  simcontrol.cpp  simcontrol.h  spacecraft.cpp  spacecraft.h  spacemath.cpp  spacemath.h  vector3.h
.qtcreator/: CMakeLists.txt.user.bada36d
backend/: CMakeLists.txt
backend/include/: Thrust.h  customSpacecraftStruct.h  environmentConfig.h  jsonConfigReader.h  physics.h  quaternion.h  simDataStruct.h  simcontrol.h  spacecraft.h  spacecraftStateStruct.h  spacemath.h  stateVectorStruct.h  vector3.h
backend/include/Automation/: adaptiveDescentController.h  flightController.h  iautopilot.h
backend/include/Control/: inputArbiter.h
backend/include/Controller/: iController.h  pd_controller.h
backend/include/Integrators/: Dynamics.h  eulerIntegrator.h  iIntegrator.h
backend/include/Optimization/: modelParams.h  optimizationStruct.h  thrustOptimizationProblem.h  thrustOptimizer.h
backend/include/Physics/: basicMoonGravityModel.h  iPhysicsModel.h
backend/include/Sensory_Perception/: iSensor.h  sensorModel.h
backend/include/Thrust/: BasicMainEngineModel.h  BasicRCSModel.h  EngineConfig.h  FuelStateStruct.h  FueltankStruct.h  RCSControlAllocator.h  RCS_ThrustState.h  iThrust.h  thrustState.h
backend/src/: Thrust.cpp  jsonConfigReader.cpp  logger.cpp  logger.h  main.cpp  physics.cpp  quaternion.cpp  simcontrol.cpp  spacecraft.cpp  spacemath.cpp
backend/src/Automation/: adaptiveDescentController.cpp  flightController.cpp  iAutopilot.cpp
backend/src/Control/: inputArbiter.cpp
backend/src/Controller/: pd_controller.cpp
backend/src/Integrators/: Dynamics.cpp  eulerIntegrator.cpp
backend/src/Optimization/: thrustCostFunction.cpp  thrustOptimizer.cpp
backend/src/Physics/: basicMoonGravityModel.cpp
backend/src/Sensory_Perception/: sensorModel.cpp
backend/src/Thrust/: BasicMainEngineModel.cpp  BasicRCSModel.cpp
configs/: lander.json
docs/: Windows_Installation_Instruction.md  adaptive_descent_controller.md  architecture.md  contributing.md  installation_guideline_ubuntu
project_infos/: Architecture.txt.rtf  readme.txt
ui/: CMakeLists.txt  cockpitpage.cpp  cockpitpage.h  configmanager.cpp  configmanager.h  flightcommandstruct.h  homepage.cpp  homepage.h  inputmapper.cpp  inputmapper.h  landingview.cpp  landingview.h  mainwindow.cpp  mainwindow.h  simulationworker.cpp  simulationworker.h  spacecraftselectionpage.cpp  spacecraftselectionpage.h  uibuilder.cpp  uibuilder.h
ui/MoonLanderUI/: CMakeLists.txt
ui/Resources/configs/: lander.json  multiEngineConfig.json
